[metadata]
description-file = README.md

[tool:pytest]
addopts = tests/test_main.py --doctest-modules --cov=./models --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --pep8 --ignore=docs/
doctest_encoding = utf-8
pep8ignore = E201 E231 E501

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 160
statistics = True

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100, D401
match_dir = models
